Updated custom fonts. Fixed small screen layout bugs.

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,17 @@
+* {
+  font-family: "Orbitron", sans-serif !important;
+}
+
+p,
+ul,
+li,
+label,
+input,
+textarea,
+.MuiSelect-select {
+  font-family: "Exo 2", sans-serif !important;
+}
+
 html,
 body {
   background-color: #000000 !important;
